fixed header spacing

--- a/index.css
+++ b/index.css
@@ -1,53 +1,54 @@
 @import url(http://fonts.googleapis.com/css?family=Muli);
 
-div.profile-bg {
+body {
+    /*background: #000000;*/
+}
+div#profile-bg {
     position: relative;
     margin-bottom: 25px;
     text-align: center;
 }
-.icons {
+div#my-name {
+    position: absolute;
+    display: block;
+    top: 20%;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    /*z-index: 10;*/
+}
+h1 {
+    text-align: center;
+    color: #FFF;
+    font-family: 'Muli', sans-serif;
+    font-weight: 700;
+    font-size: 350%;
+}
+div#icons {
     position: absolute;
     left: 0;
     right: 0;
-    top: 35%;
+    top: 43%;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 10px;
     margin-top: 10px;
 }
-.icon {
+img.icon {
     width: 30px;
     height: 30px;
     margin-left: 5px;
     margin-right: 5px;
     opacity: 0.6;
 }
-.icon:hover{
+img.icon:hover{
     opacity: 1;
-}
-.nav-btn {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;   
 }
 img#skyline {
     display: block;
     width: 100%;
-    height: 100%;
-}
-h1 {
-    display: block;
-    position: absolute;
-    top: 23%;
-    left: 0;
-    right: 0;
-    margin-left: auto;
-    margin-right: auto;
-    color: #FFF;
-    font-family: 'Muli', sans-serif;
-    font-weight: 700;
-    font-size: 350%;
-    z-index: 10;
+    height: 500px;
 }
 p.info {
     font-weight: 200;
@@ -73,17 +74,32 @@ p.info {
     float: right;   
     margin-bottom: 25px;
 }
+div#profile-style {
+    display: block;
+    height: 160px;
+    width: 160px;
+    position: relative;
+    margin-top: -80px;
+    margin-left: auto;
+    margin-right: auto;
+}
+div#white-circle{
+    position: absolute;
+    display: block;
+    width: 160px;
+    height: 160px;
+    border-radius: 50%;
+    background-color: #FFFFFF;
+}
 img#mypic {
+    position: absolute;
     display: block;
     width: 150px;
     height: 150px;
     border-radius: 50%;
-    position: absolute;
-    top: 55%;
-    left: 0;
-    right: 0;
-    margin-left: auto;
-    margin-right: auto;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 div.resume-block {
     position: relative;
@@ -110,7 +126,11 @@ footer {
     color: #FFF;
     margin-top: 10px;
 }
-
+/*.nav-btn {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;   
+}*/
 
 
 
